# MEvalKit

./: .env  README.md  app.py  pyproject.toml  requirements.txt  run.py
data/gpqa/: gpqa_main.csv
data/knowledgeQA_2500/: knowledgeQA_2500.json
dataset_info/: LLMJudge_dataset.json  image_dataset.json  text_dataset.json
datasets/: ImageMCQ.py  TextBase.py  TextMCQ.py  dataset_info.json  model_info.py  utils.py
evaluation/: ImageMCQ_eval.py  LLMJudge_eval.py  TextMCQ_eval.py  TextMCQ_eval_discard.py
results/: CMB_gpt-3.5-turbo_result.json  CMB_gpt-3.5-turbo_result_accuracy.json  GPQA_gpt-3.5-turbo_result.json  GPQA_gpt-3.5-turbo_result_accuracy.json  MMLU_gpt-3.5-turbo_result.json  MMLU_gpt-3.5-turbo_result_accuracy.json  MMLU_gpt-4o_result.json  MMLU_gpt-4o_result_accuracy.json  MMStar_Qwen2-VL-7B-Instruct_result.json  MMStar_Qwen2-VL-7B-Instruct_result_accuracy.json  MT-Bench_gpt-3.5-turbo_gpt-4o_2.json  MT-Bench_gpt-3.5-turbo_result.json  MT-Bench_gpt-3.5-turbo_score.json  MedEthicMatrixMCQ_human_result.json  MedEthicMatrixMCQ_human_result_accuracy.json  MedEthicMatrix_MCQ_human_result.json  knowledgeQA_2500_gpt-3.5-turbo_result.json  knowledgeQA_2500_gpt-3.5-turbo_result_accuracy.json
results/LLMJudge/: MT-Bench_gpt-3.5-turbo_gpt-4o_result.json  MT-Bench_gpt-3.5-turbo_gpt-4o_score.json
src/api/: api.py  multimodal_api.py  multiturn_text_api.py  siliconflow_api.py  text_api.py
templates/: create_task.html  human_evaluation.html  index.html  leaderboard.html  overall_leaderboard.html  results.html  specific_leaderboard.html  task_detail.html
(+14 files in other folders)
